<resources>
    <string name="app_name">PickAToast</string>
    <string name="tv_nombre">Introduce tu nombre</string>
    <string name="tv_correo">Introduce tu correo</string>
    <string name="et_contraseña">Introduce tu contraseña</string>
    <string name="et_verificar_correo">Introduce de nuevo tu contraseña</string>
    <string name="et_nombre">Introduce el nombre</string>
    <string name="tv_paso_uno">Crea tu cuenta</string>
    <string name="btn_registro_uno">¡Vamos!</string>
    <string name="et_localidad">Localidad</string>
    <string name="et_oficio">Oficio</string>
    <string name="tv_paso_dos">Paso 2</string>
    <string name="CLAVE_CORREO">CLAVE CORREO</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_login">Log in</string>
    <string name="nombre_empresa">Introduce el nombre de la empresa</string>
    <string name="localidad_empresa">Introduce la localidad de la empresa</string>
    <string name="direccion_empresa">Introduce la direccion de la empresa</string>
    <string name="btn_cam_img_empleador">Cambiar Imagen</string>
    <string name="btn_editar_empleador">Editar Datos</string>
    <string name="btn_guardar_empleador">Guardar</string>
    <string name="btn_cambiar_contraseña">Borrar Perfil</string>
    <string name="github"><a href="https://github.com/DaniSabbagh97/PickAToast">GITHUB</a>"</string>

    <!-- Subrayados-->
    <string name="registrate"><u>¿No tienes cuenta? ¡Regístrate!</u></string>
    <string name="tvnombre"><u>Nombre______________ </u></string>
    <string name="tvmunicipio"><u>Municipio____________ </u></string>
    <string name="tvdirecc"><u>Dirección_____________ </u></string>
    <string name="tvofic"><u>Oficio_________________ </u></string>
    <string name="tvduracion"><u>Duración______________ </u></string>
    <string name="tvlocalizacion"><u>Localización____________ </u></string>
    <string name="tvrestaurante"><u>Local___________________ </u></string>

    <!--Descripcion de ImageButtons para que no lo de como error-->
    <string name="topMainMenuSideMenuButtonDesc">Hamburguer button to open the left menu</string>
    <string name="topMainMenuNotificationButtonDesc">Bell button to open the app´s notifications</string>
    <string name="topMainMenuProfileButtonDesc">User´s Picture button to open his profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_prueba_borrar">PruebaBorrar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
