<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundImage"
    tools:context=".RegristroEmpleado">


    <Button
        android:id="@+id/btnRegistrarEmpleado"
        android:text="@string/btn_registro_uno"
        style="@style/YellowButton" />

    <EditText
        android:id="@+id/etVerificarContraseña"
        android:layout_marginBottom="270dp"
        android:hint="@string/et_verificar_correo"
        style="@style/loginEditText" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_marginBottom="336dp"
        android:hint="@string/et_contraseña"
        style="@style/loginEditText" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_marginBottom="402dp"
        android:hint="@string/tv_correo"
        style="@style/loginEditText" />

    <TextView
        android:id="@+id/tvPaso1"
        android:layout_width="194dp"
        android:layout_height="100dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="470dp"
        android:text="@string/tv_paso_uno"
        android:textSize="36sp"
        style="@style/titleBodoni" />

</RelativeLayout>