<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroEmpleador1">

    <EditText
        android:id="@+id/etCorreoEmpleador"
        android:layout_width="246dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="338dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/tv_correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etContraseñaEmpleador"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="254dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_contraseña"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etVerContraseñaEmpelador"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="166dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_verificar_correo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSubirEmpelador"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="39dp"
        android:text="@string/btn_registro_uno" />
</RelativeLayout>