<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroEmpleador2">

    <EditText
        android:id="@+id/etNombreEmpresa"
        android:layout_width="292dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="395dp"
        android:ems="10"
        android:hint="@string/nombre_empresa"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="285dp" />

    <EditText
        android:id="@+id/etLocalidadEmpresa"
        android:layout_width="292dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="325dp"
        android:ems="10"
        android:hint="@string/localidad_empresa"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="359dp" />

    <EditText
        android:id="@+id/etDireccionEmpresa"
        android:layout_width="292dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="253dp"
        android:ems="10"
        android:hint="@string/direccion_empresa"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="425dp" />

    <Button
        android:id="@+id/btnSubidaEmpleadorDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="104dp"
        android:text="@string/btn_registro_uno"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="557dp" />
</RelativeLayout>