<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".Fragments.TopMainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cream"
        android:orientation="horizontal"
        android:weightSum="1"
>

        <ImageButton
            android:id="@+id/topMainMenuSideMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@android:drawable/ic_menu_sort_by_size"
            android:contentDescription="@string/topMainMenuSideMenuButtonDesc"
           />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <ImageButton
                android:id="@+id/topMainMenuNotificationButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/topMainMenuNotificationButtonDesc"
                android:src="@drawable/bell2" />

            <ImageButton
                android:id="@+id/topMainMenuProfileButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/topMainMenuProfileButtonDesc"
                android:src="@drawable/fui_ic_anonymous_white_24dp" />
        </LinearLayout>


    </LinearLayout>


</FrameLayout>