<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/backgroundImage"
    tools:context=".RegistroEmpleado2">

    <Button
        android:id="@+id/btnRegistrarEmpleado2"
        style="@style/YellowButton"
        android:text="@string/btn_registro_uno" />

    <EditText
        android:id="@+id/etDireccionEmpeladoReg"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="306dp"
        android:background="@drawable/texto_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="Direccion"
        android:textColor="@color/color_textview_font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etLocalidadRegistro"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="393dp"
        android:background="@drawable/texto_redondo"
        android:ems="10"
        android:gravity="center"
        android:layout_marginBottom="336dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        style="@style/loginEditText"
        android:hint="@string/et_localidad"
        android:textColor="@color/color_textview_font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNombreEmpleado"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="456dp"
        android:background="@drawable/texto_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_nombre"
        android:textColor="@color/color_textview_font"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etOficioRegistro"
        android:layout_marginBottom="270dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textSize="18dp"
        style="@style/loginEditText"
        android:hint="@string/et_oficio"
        android:textColor="@color/color_textview_font"
         />

    <TextView
        android:id="@+id/tvPaso1"
        android:layout_width="194dp"
        android:layout_height="100dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="470dp"
        android:text="Introduce tus datos"
        android:textSize="36sp"
        style="@style/titleBodoni" />

</RelativeLayout>