<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarEmpleador">

    <EditText
        android:id="@+id/etNombreEmpleadorEd"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="415dp"
        android:inputType="textPersonName"
        android:text="Nombre"
        style="@style/profile_et" />

    <EditText
        android:id="@+id/etDireccionEmpleadorEd"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="336dp"
        style="@style/profile_et"
        android:inputType="textPersonName"

        android:text="Name" />

    <EditText
        android:id="@+id/etDLocalidadEmpleadorEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="252dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <Button
        android:id="@+id/btnBorrarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:text="@string/btn_cambiar_contraseña" />

    <Button
        android:id="@+id/btnContraseñaEmpleador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="97dp"
        android:text="Cambiar Contraseña" />

    <Button
        android:id="@+id/btnCambiarImagenEmpleador"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="145dp"
        android:enabled="true"
        android:text="@string/btn_cam_img_empleador" />

    <Button
        android:id="@+id/btnCambiarImagenEmpleador2"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="145dp"
        android:enabled="true"
        android:text="Hacer Foto" />

    <Button
        android:id="@+id/btnGuardarEmpelador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:enabled="true"
        android:text="@string/btn_guardar_empleador" />

    <ImageView
        android:id="@+id/imgPerfilEmpleadorED"
        android:layout_width="181dp"
        android:layout_height="206dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="499dp"
        app:srcCompat="@drawable/toast_logo" />

</RelativeLayout>